--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grace-shopper-project",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "Our new E-commerce Website",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
