--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.0",
+    "react-icons": "^4.9.0",
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
