added payment methods

--- a/JWT.env
+++ b/JWT.env
@@ -6,3 +6,6 @@ DB_PORT=5432
 JWT_SECRET=your_jwt_secret
 PORT=8080
 SEED=true
+STRIPE_SECRET_KEY=lalifters
+PAYPAL_CLIENT_ID=lalifters
+PAYPAL_CLIENT_SECRET=lalifters
