--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "bcrypt": "^5.1.0",
@@ -44,6 +45,7 @@
     "axios-mock-adapter": "^1.21.2",
     "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
+    "css-loader": "^6.8.1",
     "esm": "^3.2.25",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
@@ -52,6 +54,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "redux-logger": "^3.0.6",
+    "style-loader": "^3.3.3",
     "supertest": "^6.3.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
