--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai": "^4.3.6",
     "css-loader": "^6.8.1",
     "esm": "^3.2.25",
+    "file-loader": "^6.2.0",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
