switched to sequelize

--- a/JWT.env
+++ b/JWT.env
@@ -1,11 +1,11 @@
-DB_USER=gabrielresendez
-DB_HOST=localhost
-DB_NAME=grace-shopper-project
-DB_PASSWORD=lalifters
-DB_PORT=5432
+DB_USER=your_db_username
+DB_HOST=your_db_host
+DB_NAME=your_db_name
+DB_PASSWORD=your_db_password
+DB_PORT=your_db_port
+DB_DIALECT=your_db_dialect  // <-- can be 'mysql', 'postgres', 'sqlite', 'mssql'
 JWT_SECRET=your_jwt_secret
-PORT=8080
-SEED=true
+PORT=your_preferred_port
 STRIPE_SECRET_KEY=lalifters
 PAYPAL_CLIENT_ID=lalifters
 PAYPAL_CLIENT_SECRET=lalifters
