--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.0",
     "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
     "sequelize": "^6.25.3",
     "stripe": "^12.9.0"
   },
